--- a/src/components/common/Contact/Contact.css
+++ b/src/components/common/Contact/Contact.css
@@ -31,3 +31,8 @@
     font-weight: 500;
     color: var(--white-1);
 }
+
+/* Mobile Phones And Tablets */
+@media screen and (max-width: 1024px) {
+    
+}
