--- a/src/pages/DigitalMailbox/DigitalMailbox.css
+++ b/src/pages/DigitalMailbox/DigitalMailbox.css
@@ -8,6 +8,7 @@
 
 .digital-mailbox-section div img {
     width: 30vw;
+    border-radius: 1rem;
 }
 
 .announcement-section {
@@ -86,5 +87,6 @@
 
     .digital-mailbox-section div img {
         width: 100%;
+        border-radius: 0;
     }
 }
