--- a/src/components/sections/Home/WhoAreWe/WhoAreWe.css
+++ b/src/components/sections/Home/WhoAreWe/WhoAreWe.css
@@ -6,7 +6,13 @@
     box-shadow: 0 0 1rem 0 rgba(0, 0, 0, 0.4);
     border-radius: 1rem;
     color: var(--blue-4);
-    margin: 5vh 0;
+    margin: 5vh 0 2.5vh 0;
+    transition: all 0.5s ease-in-out;
+}
+
+.who-are-we-container:hover {
+    transform: scale(1.005);
+    box-shadow: 0 0 1rem 0 rgba(0, 0, 0, 0.6);
 }
 
 .who-are-we-container h1 {
@@ -24,4 +30,17 @@
 
 .who-are-we-container p strong {
     font-weight: 900;
+}
+
+/* Mobile Phones And Tablets */
+@media screen and (max-width: 1024px) {
+    .who-are-we-container {
+        width: 85vw;
+        padding: 4vh 6vw;
+        margin: 4vh 0 2vh 0;
+    }
+
+    .who-are-we-container h1 {
+        padding-bottom: 1rem;
+    }
 }
