Header terminado con diseño responsivo e integracion de menu hamburguesa

--- a/src/assets/styles/App.css
+++ b/src/assets/styles/App.css
@@ -24,6 +24,10 @@
     --blue-4: #4D7298;
 
     --gray-1: #F9F9F9;
+    --gray-2: #E0E0E0;
+
+    --red-1: #FF5733;
+    --red-2: #C70039;
 }
 
 * {
