--- a/src/components/common/items-drawer/ItemDrawerThree/ItemDrawerThree.css
+++ b/src/components/common/items-drawer/ItemDrawerThree/ItemDrawerThree.css
@@ -1,4 +1,5 @@
 .my-link-container,
+.my-link-container-list-drawer-three nav
 .my-drawer-header-list-mine div span {
     color: var(--blue-4);
     text-decoration: none;
