--- a/src/pages/PECCLEC/PECCLEC.css
+++ b/src/pages/PECCLEC/PECCLEC.css
@@ -94,6 +94,7 @@
 
 .card-pecclec iframe {
   width: 90%;
+  border-radius: 0.5rem;
 }
 
 .card-container-pecclec {
@@ -155,6 +156,7 @@
 .swiper-slidee iframe {
   width: 100%;
   height: 50vh;
+  border-radius: 1rem;
 }
 
 .swiper-slidee p {
