--- a/src/pages/JCEF/JCEF.css
+++ b/src/pages/JCEF/JCEF.css
@@ -3,6 +3,8 @@
     flex-direction: column;
     align-items: center;
     background-color: var(--gray-1);
+    gap: 5vh 0;
+    padding-bottom: 7vh;
 }
 
 .jcef-page-container .hero {
@@ -11,7 +13,32 @@
     object-fit: cover;
 }
 
+.jcef-page-container .img {
+    width: 80vw;
+    border-radius: 1rem;
+    box-shadow: 0 0 1rem 0 rgba(0, 0, 0, 0.4);
+    transition: all 0.3s ease-in-out;
+}
 
+.information-of-program-container:hover,
+.jcef-page-container .main-video:hover,
+.operation-rules-container:hover,
+.jcef-page-container .first-part:hover, 
+.jcef-page-container .pdf-jcef:hover,
+.jcef-page-container .img:hover {
+    transform: scale(1.005);
+    box-shadow: 0 0 1rem 0 rgba(0, 0, 0, 0.6);
+}
+
+.jcef-page-container .pdf-jcef {
+    width: 80vw;
+    height: 80vh;
+    border-radius: 1rem;
+    box-shadow: 0 0 1rem 0 rgba(0, 0, 0, 0.4);
+    transition: all 0.3s ease-in-out;
+}
+
+.information-of-program-container,
 .operation-rules-container,
 .jcef-page-container .first-part {
     width: 80vw;
@@ -24,11 +51,20 @@
     padding: 3vh 5%;
     border-radius: 1rem;
     box-shadow: 0 0 1rem 0 rgba(0, 0, 0, 0.4);
+    transition: all 0.3s ease-in-out;
 }
 
-.jcef-page-container iframe {
-    width: 70%;
+.jcef-page-container .main-video {
+    width: 80vw;
+    height: 70vh;
+    transition: all 0.3s ease-in-out;
     border-radius: 1rem;
+    box-shadow: 0 0 1rem 0 rgba(0, 0, 0, 0.4);
+    transition: all 0.3s ease-in-out;
+}
+
+.jcef-page-container .main-video:hover {
+    filter: brightness(0.8);
 }
 
 .jcef-page-container .first-part div {
@@ -50,7 +86,7 @@
     border-radius: 0 0 1rem 1rem;
 }
 
-.jcef-page-container button {
+.jcef-page-container .a {
     width: 100%;
     background-color: var(--blue-3);
     font-size: 1.5rem;
@@ -61,13 +97,15 @@
     transition: all 0.3s ease-in-out;
     cursor: pointer;
     margin-top: 3vh;
+    text-align: center;
 }
 
-.jcef-page-container button:hover {
+.jcef-page-container .a:hover {
     background-color: var(--blue-4);
     cursor: pointer;
 }
 
+.information-of-program-container h2,
 .operation-rules-container h2 {
     font-size: 2rem;
     font-weight: 600;
@@ -80,6 +118,50 @@
     width: 100%;
     height: 60vh;
 }
+
+.information-of-program-container .first-display {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.information-of-program-container .first-display .aa {
+    transition: all 0.3s ease-in-out;
+    border-radius: 1rem;
+}
+
+.information-of-program-container .first-display a img {
+    width: 100%;
+    border-radius: 1rem;
+}
+
+.information-of-program-container .first-display .aa:hover {
+    filter: brightness(0.8);
+    transform: scale(1.005);
+}
+
+.jcef-infc-main {
+    display: flex;
+    padding-top: 2vh;
+    justify-content: space-between;
+}
+
+.jcef-infc-main div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 30%;
+}
+
+.jcef-infc-main div h3 {
+    font-size: 1.25rem;
+    text-align: center;
+    font-weight: 600;
+    color: var(--blue-4);
+    padding-bottom: 1rem;
+}
+
 
 
 /* Mobile Phones And Tablets */
