--- a/client/src/components/sections/Header/Header.css
+++ b/client/src/components/sections/Header/Header.css
@@ -88,17 +88,29 @@
 .routes-nav-container ul {
     display: flex;
     justify-content: space-evenly;
+    align-items: center;
     background-color: var(--blue-4);
-    padding: 2vh 0;
     color: var(--white-1);
-    font-size: 1.125rem;
+    font-size: 1.5rem;
     font-weight: 600;
+    text-align: center;
 }
 
 .routes-nav-container ul li {
     width: 25%;
     display: flex;
     justify-content: center;
+    transition: all 0.3s ease-in-out 0s;
+}
+
+.routes-nav-container ul li a {
+    width: 100%;
+    padding: 2vh 0;
+}
+
+.routes-nav-container ul li:hover {
+    background-color: var(--white-1);
+    color: var(--blue-4);
 }
 
 
@@ -124,5 +136,17 @@
     .button-header {
         margin-left: 0.5rem;
         padding: 1rem 1rem;
+    }
+
+    .routes-nav-container ul {
+        flex-direction: column;
+    }
+
+    .routes-nav-container ul li {
+        width: 100%;
+    }
+
+    .routes-nav-container ul li a {
+        padding: 1rem 0;
     }
 }
