--- a/client/src/pages/Home/Home.css
+++ b/client/src/pages/Home/Home.css
@@ -1,4 +1,4 @@
-.home-container {
+/**.home-container {
     background-color: var(--gray-1);
     display: flex;
     flex-direction: column;
@@ -10,11 +10,11 @@
     width: 70vw;
     display: block;
     margin: 0 auto;
-}
+}*/
 
 /* Mobile Phones And Tablets */
-@media screen and (max-width: 1024px) {
+/**@media screen and (max-width: 1024px) {
     .banner-container {
         width: 100%;
     }
-}
+}*/
