--- a/client/src/pages/PECCLEC/PECCLEC.css
+++ b/client/src/pages/PECCLEC/PECCLEC.css
@@ -156,6 +156,7 @@
   font-weight: 600;
   font-size: 1.25rem;
   padding-bottom: 1.5rem;
+  color: var(--white-1);
 }
 
 .swiper-slidee iframe {
@@ -171,6 +172,7 @@
 
 .swiper-slidee p {
   padding-top: 1rem;
+  color: var(--white-1);
 }
 
 .swiper-slidee:nth-child(1n) {
